--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -24,7 +24,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    /*text-transform: uppercase;*/
+    text-transform: uppercase;
     font-family: Roboto, Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -81,6 +81,10 @@ a:focus {
     padding: 4px 6px;
     font-size: 16px;
     color: #fff;
+}
+.navbar-brand {
+  padding-top:10px;
+  padding-bottom: 10px;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
