--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
+                      <br>
                         <h1 class="brand-heading"><span class="yellow">Time</span>Layers</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                        <p class="intro-text">This is your city.<br>
+                          This is your history.<br>
+                          This is your future.<br>
+                        </p>
+                        <p>
+                          <span class="yellow">TIME</span>LAYERS turns urban space into an immersive exhibition of past and future.
+                          The city becomes a museum that preserves and brings to life urban memory of citizens and visitors in an inclusive and participatory process. <br>
+                          Use <span class="yellow">TIME</span>LAYERS to inscribe fragments of the past and projects of the future into physical urban space and help change how we perceive cities tomorrow.
+                        </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
