Update About info

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,11 +2,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About TimeLayers</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About <span class="yellow">TIME</span>LAYERS</h2>
+                <p><span class="yellow">TIME</span>LAYERS has at its basis an understanding of the city as urban palimpsest. A palimpsest is an antique or medieval piece of writing from which the original text has been erased and overwritten with new text. The example of the Archimedes palimpsest shows that layers of earlier texts are not always completely erased and that fragments of another time have the potential of unlocking secrets of the future. Our cities are urban palimpsests, consisting of various layers across time. Urban layers are made of urban memory and local history which emerge from everyday social and cultural practice,  made accessible through TimeLayers' visual, audio and video information. TimeLayers opens up new avenues of understanding the city and its cultural diversity to which citizens, scholars and visitors can contribute. The act of unforgetting the past an looking into the future is necessary and desirable toward inclusive, participatory city-making and urban living.</p>
+                <p><span class="yellow">TIME</span>LAYERS is a platform for public, scholars and professionals invested in developing a critical understanding for urban transformation processes toward a sustainable urban and cultural future of our cities. It encourages inclusionary, participatory planning strategies. TimeLayers raises sensibility for urban and cultural heritage and makes aware of the erasure of historical and cultural assets and neighborhood memory through urban transformation. It acts as online memory for overwritten layers and enables access to past and future information of our city.</p>
+                <p><span class="yellow">TIME</span>LAYERS is a perfect solution for individuals, institutions and businesses interested and engaged in the production, research, and improvement of our urban spaces.</p>
             </div>
         </div>
     </section>
