--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,9 +5,9 @@
                 <h2>Contact</h2>
             </div>
             {% for author in site.authors%}
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="author">
-                  <img src="/img/{{ author.link }}.jpeg" alt="">
+                  <img src="/img/{{ author.link }}.jpg" alt="">
                   <p class="auth-name">
                     {{ author.name }}
                     <br>
