--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,25 @@
     <!-- Footer -->
     <footer>
+      <div class="row">
+
+        <div class="col-md-4 col-md-offset-4">
+          <h2>Sponsors:</h2>
+        </div>
+      </div>
+      <div class="row">
+        {% for sponsor in site.sponsors %}
+        <div class="col-md-4">
+          <div class="sponsors">
+            {{ if sponsor.logo }}
+            <img src="{{ sponsor.logo }}" alt="sponsor-logo" class="sponsor-logo">
+            {{ endif }}
+            <a href="{{ sponsor.link }}">{{ sponsor.name }}</a>
+          </div>
+        </div>
+        {% endfor %}
+
+      </div>
+      <br><br>
         <div class="container text-center">
             <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
         </div>
