--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       <div class="row">
         {% for sponsor in site.sponsors %}
         <div class="col-md-4">
-          <div class="sponsors">
+          <div class="sponsors text-center">
             {{ if sponsor.logo }}
             <img src="{{ sponsor.logo }}" alt="sponsor-logo" class="sponsor-logo">
             {{ endif }}
