Add twitter search feed

--- a/_includes/timelabs.html
+++ b/_includes/timelabs.html
@@ -4,18 +4,12 @@
         <div class="col-lg-8 col-lg-offset-2">
             <h2>TimeLabs</h2>
             <p class="text-justify">TimeLabs is a community of institutions invested in the collecting, preserving and expanding urban memory. TimeLabs all around the world contribute to the growing platform of TimeLayers and encourage your individual contribution and your sharing of personal memory and history. <br>
-              The following institutions are local partners:
             </p>
-            <ul class="countries">
-              <li>Brazil</li>
-              <li>Germany</li>
-              <li>Switzerland</li>
-              <li>Mexico</li>
-              <li>Netherlands</li>
-              <li>Philippines</li>
-              <li>Turkey</li>
-              <li>USA</li>
-            </ul>
+            <a class="twitter-timeline" href="https://twitter.com/hashtag/TimeLayers" data-widget-id="699947731691954177">#TimeLayers Tweets</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+            <br>
+            <br>
             <br>
         </div>
     </div>
