--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
                 <p class="text-justify">
                   <img src="/img/scan.jpg" class="img-responsive" alt="Scan"><br>
                   <span class="yellow">TIME</span>LAYERS is a web and mobile platform for public, scholars and professionals invested in developing a critical understanding for urban transformation processes toward a sustainable urban and cultural future of our cities. It encourages inclusionary, participatory planning strategies. <span class="yellow">TIME</span>LAYERS raises sensibility for urban and cultural heritage and makes aware of the erasure of historical and cultural assets and neighborhood memory through urban transformation. It acts as online memory for overwritten layers and enables access to past and future information of our city.</p>
-                <p class="text-justify"><span class="yellow">TIME</span>LAYERS is a perfect solution for individuals, institutions and businesses interested and engaged in the production, research, and improvement of our urban spaces.</p>
+                <p class="text-justify">Currently in its test phase, <span class="yellow">TIME</span>LAYERS will offer solutions for individuals, institutions and businesses interested and engaged in the production, research, and improvement of our urban spaces.</p>
             </div>
         </div>
     </section>
