--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                           This is your future.<br>
                         </p>
                         <p>
-                          Use <span class="yellow">TIME</span>LAYERS to inscribe fragments of the past and projects of the future into physical urban space and help change how we perceive cities tomorrow.
+                          Use <span class="yellow">TIME</span>LAYERS to inscribe fragments of the past and projects of the future into physical urban space and help change how we perceive cities.
                           <span class="yellow">TIME</span>LAYERS turns urban space into an immersive exhibition of past and future.
                           The city becomes a museum that preserves and brings to life urban memory of citizens and visitors in an inclusive and participatory process. <br>
                         </p>
